# Personal-ChatApp

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt  ChatWidget.h  Chatwidget.cpp  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  NetworkManager.cpp  NetworkManager.h  main.cpp
Server/: CMakeLists.txt  ChatServer.h  Chatserver.cpp  ClientHandler.cpp  ClientHandler.h  DatabaseManager.cpp  DatabaseManager.h  main.cpp
Shared/: CMakeLists.txt  protocol.h
